--- a/src/app/Components/order-successfull/order-successfull.component.html
+++ b/src/app/Components/order-successfull/order-successfull.component.html
@@ -1,7 +1,10 @@
 <div class="design">
     <h1 class="h1">Order Placed Successfully.</h1>
     <br><br><br>
-    <h3 class="h3">hurray!!! your order is confirmed the order id is #{{this.order_id}} save the order id for further communication.</h3>
+    <div>
+        <h3 class="h3">hurray!!! your order is confirmed the order id is <span
+                *ngFor="let id of orderIds">#{{id}}</span> save the order id for further communication.</h3>
+    </div>
     <table class="table">
         <tr class="table-head">
             <th>Email Us</th>
