--- a/src/app/Components/order-successfull/order-successfull.component.html
+++ b/src/app/Components/order-successfull/order-successfull.component.html
@@ -3,7 +3,7 @@
     <br><br><br>
     <div>
         <h3 class="h3">hurray!!! your order is confirmed the order id is <span
-                *ngFor="let id of orderIds">#{{id}}</span> save the order id for further communication.</h3>
+                *ngFor="let id of orderIds">#{{id}},</span> save the order id for further communication.</h3>
     </div>
     <table class="table">
         <tr class="table-head">
